--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.username = jacalendar
 spring.datasource.password = jacalendar
 
 ## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL9Dialect
 
 ## This is important
 # Hibernate ddl auto (create, create-drop, validate, update)
