--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL9Dialect
 ## This is important
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = validate
+
+#enabling overriding
+#spring.main.allow-bean-definition-overriding = true
